--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="clear_button_title">Clear</string>
     <string name="autocenter_button_title">Autocenter</string>
     <string name="settings_button_title">Settings</string>
+    <string name="draw_circles_button_title">Circle drawing mode</string>
     <!-- unused -->
     <string name="change_color_button_title">Change color</string>
 
@@ -178,9 +179,5 @@
     <string name="circle_show_description">Visible</string>
     <string name="toggle_folders">Toggle folders</string>
     <string name="settings_ddu_files_title">Revert defaults</string>
-
-    <string name="title_activity_fullscreen">FullscreenActivity</string>
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
 
 </resources>
