--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,9 +68,8 @@
     <!-- ^ -->
     <string name="show_stat_title">Show statistics</string>
     <string name="stat_n_updates_text">%d updates</string>
-    <string name="stat_20_updates_per_text">20 updates per %.3f seconds</string>
-    <string name="stat_n_updates_initial"># of updates</string>
-    <string name="stat_20_updates_per_initial">20 updates per #</string>
+    <string name="stat_x_updates_per_text">%d updates per %.3f seconds</string>
+    <string name="stat_x_updates_per_initial"># updates per #</string>
     <string name="always_autocenter_title">Always autocenter</string>
     <string name="always_autocenter_summary">Autocenter when loading new ddu and best center is not specified</string>
     <string name="canvas_factor_title">Canvas factor</string>
