--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Додека Медитация">
-        <!ENTITY version_name "1.4.4">
+        <!ENTITY version_name "1.4.5">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -62,7 +62,7 @@
     <string name="speed_title">Скорость</string>
     <string name="speed_summary">Делать %s пересчётов подряд</string>
     <string name="canvas_factor_oom_toast">Размер холста %d слишком большой: он вызвал переполнение памяти! Пробуем меньший размер %d…</string>
-    <string name="minimal_canvas_factor_oom_toast">Минимальный размер холста %d вызвал переполнение памяти! Пробуем снова…</string>
+    <string name="minimal_canvas_factor_oom_toast">Минимальный размер холста %d вызвал переполнение памяти!</string>
     <string name="restart_button_title">Перезапустить</string>
     <string name="shape_spinner_prompt">Отображать данную фигуру вместо окружности</string>
     <string name="shape_spinner_title">Выбрать форму</string>
