--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Додека Медитация">
-        <!ENTITY version_name "1.5">
+        <!ENTITY version_name "1.5.1">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -153,4 +153,6 @@
     <string name="dir_imported_toast">Папка \"%s\" была импортирована</string>
     <string name="adding_assets_status">Добавление новых ddu-картин в \"%s\"…</string>
     <string name="extracting_assets_status">Извлечение ddu-картин в \"%s\"…</string>
+    <string name="skip_n_timeout_title">Время ожидания для пропуска n обновлений</string>
+    <string name="skip_n_timeout_summary">Ждать максимум %s пока пропускаются обновления</string>
 </resources>
