--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -155,4 +155,6 @@
     <string name="extracting_assets_status">Извлечение ddu-картин в \"%s\"…</string>
     <string name="skip_n_timeout_title">Время ожидания для пропуска n обновлений</string>
     <string name="skip_n_timeout_summary">Ждать максимум %s пока пропускаются обновления</string>
+    <string name="screenshot_button_title">Сделать скриншот</string>
+    <string name="screenshot_saved_toast">"Снимок экрана сохранён как \"%s.png\" в раздел \"%s\"</string>
 </resources>
