--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -156,5 +156,5 @@
     <string name="skip_n_timeout_title">Время ожидания для пропуска n обновлений</string>
     <string name="skip_n_timeout_summary">Ждать максимум %s пока пропускаются обновления</string>
     <string name="screenshot_button_title">Сделать скриншот</string>
-    <string name="screenshot_saved_toast">"Снимок экрана сохранён как \"%s.png\" в раздел \"%s\"</string>
+    <string name="screenshot_saved_toast">"Снимок экрана сохранён как \"%s\" в раздел \"%s\"</string>
 </resources>
